# hypercorpus

./: .gitignore  .gitmodules  .stignore  CLAUDE.md  README.md  Research Ideas.md  pyproject.toml
.stfolder/: syncthing-folder-ed2ad6.txt
docs/: README.md  corpus-selection-literature.md  corpus-selection-literature.tsv  current-implementation.md  literature-map.md  literature-map.tsv  next-phase-experiments.md  paper-positioning.md  parser-inspired-search-ideas.md  phase-decisions.md
docs/mc/: README.md  venue-strategy.md
docs/notes/: literature-gap-multihop-scaling.md  search-ideas.md  venue-strategy.md
graphrag/: settings.yaml
graphrag/input/: wiki.csv
paper/: build_tables.py  claim-ledger.md  extract_data.py  literature-coverage-check.md  open-risks.md  outline.md  related-work-outline.md  tables-and-figures.md  venue-packaging.md
paper/data/: table3-2wiki-baseline.csv  table6-edge-scorer-ablation.csv
paper/figures/: architecture.mmd  architecture.tex
paper/sections/: analysis.tex  experimental_setup.tex  main_results.tex  method.md  method.tex  problem-formulation.md
paper/tables/: 2wiki-baseline.tex  edge-scorer-ablation.tex
reviews/cspaper/: review-01-desk-and-full.md  review-02-stanford-paperreview-ai.md  review-03-revised-desk-and-full.md  review-04-revised-stanford-paperreview-ai.md  review-05-revised-v2-desk-and-full.md  review-07-v3-cspaper-sigir.md  (+16 more)
runs/: iirc-phase2-local-s100-status.md
scripts/: hotqa_data.sh  paper_tables.py  run_iirc_controller_ablation.sh  run_iirc_selector_main_copilot.sh  run_mdr_pipeline.sh
tests/: conftest.py  test_benchmark_experiments.py  test_candidate_policy.py  test_cli_benchmarks.py  test_cli_dataset_stores.py  test_cli_datasets.py  test_cli_experiments.py  test_cli_raw_datasets.py  test_dataset_fetch.py  test_docs.py  test_eval.py  test_experiments.py  test_graph.py  test_hotpotqa.py  test_iirc.py  test_logging.py  test_mdr_baselines.py  test_musique.py  test_prefilter_ablation.py  test_prefilter_only_selector.py  test_raw_converters.py  test_reanswer_cli.py  test_selector.py  test_selector_bfs.py  test_selector_bm25.py  test_selector_llm.py  test_selector_ppr.py  test_store.py  test_subgraph.py  test_text.py  test_twowiki.py  test_twowiki_store.py  test_walker.py
(+84 files in other folders)
