[project]
name = "webwalker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
	{ name = "acture", email = "acturea@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
	"anthropic>=0.72.0",
	"datasets>=4.5.0",
	"google-genai>=1.39.1",
	"graphrag>=2.7.0",
	"openai>=2.15.0",
	"pandas>=2.3.3",
	"rich>=14.2.0",
]

[project.scripts]
webwalker-cli = "webwalker_cli:app"

[build-system]
requires = ["uv>=0.5.26,<0.6"]
build-backend = "uv"

[dependency-groups]
dev = [
	"pytest>=9.0.2",
	"ruff>=0.14.13",
]


[tool.uv.build-backend]
module-name = ["webwalker", "webwalker_cli"]
