[project]
name = "hypercorpus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
	{ name = "acture", email = "acturea@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
	"anthropic>=0.72.0",
	"datasets>=4.5.0",
	"filelock>=3.19.1",
	"github-copilot-sdk>=0.2.0",
	"google-genai>=1.39.1",
	"graphrag>=2.7.0",
	"openai>=2.15.0",
	"pandas>=2.3.3",
	"pydantic-ai-slim[openai]>=1.13.0",
	"rich>=14.2.0",
	"sentence-transformers>=3.4.1",
]

[project.scripts]
hypercorpus = "hypercorpus_cli:app"

[build-system]
requires = ["uv-build>=0.7,<1"]
build-backend = "uv_build"

[dependency-groups]
dev = [
	"pytest>=9.0.2",
	"ruff>=0.14.13",
]


[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
# W191 (indentation contains tabs) and E101 (mixed spaces/tabs) are incompatible with tab indentation
ignore = ["W191", "E101"]

[tool.uv.build-backend]
module-name = ["hypercorpus", "hypercorpus_cli"]
